syntax = "proto3";

option csharp_namespace = "GrpcImageStreamingClient";

package imageStreaming;

import "google/protobuf/empty.proto";
// The image streaming service definition.
service ImageStreaming {

  rpc SendImageToServer (stream ImageData) returns (google.protobuf.Empty);
  rpc SendImageToClient (ImageName) returns (stream ImageData);
}

message ImageName {
	string filename = 1;
}

message ImageData {
  //byte array representing the image
  bytes data = 1;
}